works page done

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16,6 +16,16 @@ body {
   font-style: normal;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: 'sans_regular';
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -50,7 +60,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 15px;
+
   padding: 15px 25px;
   width: 100%;
   position: fixed;
@@ -69,9 +79,10 @@ html {
 }
 
 .contact-btn {
-  background: white;
+  background: black;
   padding: 8px 10px;
-  color: black;
+  color: white;
+  border: 1px solid white;
   text-decoration: none;
   font-size: 16px;
   font-family: 'sans_regular';
@@ -89,11 +100,20 @@ html {
   color: white;
 }
 
+.for-mobile {
+  display: block;
+}
+
+.for-desk {
+  display: none;
+}
+
 /** BOTTOM NAV **/
 .btm-nav {
   display: flex;
   justify-content: space-evenly;
   margin-top: -30px;
+  padding-bottom: 25px;
 }
 
 .fix-btm-nav {
@@ -158,8 +178,89 @@ html {
   content: url('../../../public/uploads/memoji_6.webp');
 }
 
+/** FIXED DIV SPACER **/
+.fixed-top-div {
+  margin-top: 110px;
+}
+
+/** WORK **/
+.padder {
+  padding: 20px 25px;
+}
+
+.work-heading-intro {
+  width: 100%;
+}
+
+.work-p {
+  color: white;
+  font-family: 'sans_regular';
+  line-height: 24px;
+  font-size: 14px;
+}
+
+.work-h2 {
+  font-size: 35px;
+}
+
+.work-card {
+  margin-bottom: 5px;
+  box-shadow: 0 20px 20px 2px rgba(0, 0, 0, 0.05);
+  margin-top: 10px;
+}
+
+.work-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+.work-card-header {
+  background-color: white;
+  color: chocolate;
+  padding: 3px 12px;
+  font-size: 4px;
+}
+
+.work-card-body {
+  width: 100%;
+}
+
+.work-card-body img {
+  width: inherit;
+}
+
+.work-card-info {
+  text-align: center;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.work-card-info p {
+  font-size: 10px;
+}
+
 /** MEDIA QUERIES **/
 
+/** TABLET QUERY **/
+@media only screen and (min-width: 768px) {
+  .work-list {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+  }
+
+  .work-card {
+    margin-right: 9px;
+    width: 46%;
+    flex-wrap: wrap;
+  }
+}
+
+/** LAPTOP QUERY **/
 @media only screen and (min-width: 992px) {
   .section-hero {
     display: flex;
@@ -178,5 +279,20 @@ html {
   }
   .btm-nav {
     margin-top: unset;
+  }
+  .padder {
+    padding: 20px 7em;
+  }
+  .work-heading-intro {
+    width: 60%;
+  }
+  .work-card-header {
+    font-size: 10px;
+  }
+  .for-mobile {
+    display: none;
+  }
+  .for-desk {
+    display: block;
   }
 }
