--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -242,6 +242,72 @@ html {
   font-size: 10px;
 }
 
+/** SKILLS **/
+.wrapper-height-cross {
+  height: 85vh;
+}
+
+/* trusted brands */
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-255px * 12));
+    transform: translateX(calc(-255px * 12));
+  }
+}
+
+@keyframes scroll {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(calc(-255px * 12));
+    transform: translateX(calc(-255px * 12));
+  }
+}
+.slider {
+  background: black;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 960px;
+}
+.slider::before,
+.slider::after {
+  background: linear-gradient(to right, black 0%, rgba(255, 255, 255, 0) 100%);
+  content: '';
+  height: 100px;
+  position: absolute;
+  width: 200px;
+  z-index: 2;
+}
+.slider::after {
+  right: 0;
+  top: 0;
+  -webkit-transform: rotateZ(180deg);
+  transform: rotateZ(180deg);
+}
+.slider::before {
+  left: 0;
+  top: 0;
+}
+.slider .slide-track {
+  -webkit-animation: scroll 45s linear infinite;
+  animation: scroll 45s linear infinite;
+  display: flex;
+  width: calc(250px * 14);
+}
+.slider .slide {
+  height: 100px;
+  width: 250px;
+}
+
 /** MEDIA QUERIES **/
 
 /** TABLET QUERY **/
